--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "13.4.3",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.12.0",
+    "next-pwa": "^5.6.0",
     "next-superjson-plugin": "^0.5.8",
     "postcss": "8.4.23",
     "pusher": "^5.1.3",
